--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: cuda-toolkit
+    # You may pin to the exact commit or the version.
+    # uses: Jimver/cuda-toolkit@2db19f456fc785238a96a48d3082d8e5c25d9d09
+      uses: Jimver/cuda-toolkit@v0.2.5
+      with:
+        # Cuda version
+        cuda: 11.6 # optional, default is 11.5.1
+        # Only installs specified subpackages, must be in the form of a JSON array. For example, if you only want to install nvcc and visual studio integration: ["nvcc", "visual_studio_integration"] double quotes required! Note that if you want to use this on Linux, 'network' method MUST be used.
+        #sub-packages: ["nvcc"]
+        # Installation method, can be either 'local' or 'network'. 'local' downloads the entire installer with all packages and runs that (you can still only install certain packages with sub-packages on Windows). 'network' downloads a smaller executable which only downloads necessary packages which you can define in subPackages
+        #method: local # optional, default is local
+        # (Linux and 'local' method only) override arguments for the linux .run installer. For example if you don't want samples use ["--toolkit"] double quotes required!
+        # linux-local-args: # optional, default is ["--toolkit", "--samples"]
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
